--- a/assets/main.css
+++ b/assets/main.css
@@ -2,8 +2,10 @@
 @tailwind components;
 @tailwind utilities;
 
-/* @layer components {
+@layer components {
     body {
         box-sizing: border-box;
+        margin: 0;
+        padding: 0;
     }
-} */
+}
