--- a/components/common/header/Header.module.css
+++ b/components/common/header/Header.module.css
@@ -4,19 +4,55 @@
     background-color: #fff;
     position: fixed;
     box-shadow: 0 5px 10px  rgba(57, 58, 61, 0.25);
-    z-index: 500;
+    z-index: 600;
 }
 
 .header_row {
     display: flex;
     align-items: center;
     flex-direction: row;
-    height: 80px;
+    flex-wrap: wrap;
+    height: auto;
     line-height: 80px;
-    gap: 60px;
+    gap: 0;
 }
 
 .header_right {
     display: flex;
-    gap: 20px;
+    order: 2;
+    gap: 10px;
+    margin-left: auto;
+    margin-right: 8px;
+    height: 60px;
+}
+
+.header_nav {
+    display: none;
+}
+
+@media screen and (min-width: 768px) {
+    .header_row {
+        height: 80px;
+        gap: 50px;
+    }
+
+    .header_right {
+        gap: 15px;
+        order: 3;
+        margin-right: 0;
+    }
+}
+
+@media screen and (min-width: 1024px) {
+    .header_row {
+        gap: 80px;
+    }
+
+    .header_right {
+        gap: 20px;
+    }
+
+    .header_nav {
+        display: block;
+    }
 }
