--- a/components/common/header/cart/Cart.module.css
+++ b/components/common/header/cart/Cart.module.css
@@ -8,13 +8,27 @@
     display: flex;
     align-items: center;
     justify-content: center;
-    width: 50px;
-    height: 50px;
-    background-color: #ccc;
-    border-radius: 1.5rem;
+    width: 45px;
+    height: 45px;
 }
 
 .cart_icon img {
-    width: 28px;
-    height: auto;
+    width: 37px;
+}
+
+@media screen and (min-width: 768px) {
+    .cart_icon {
+        width: 50px;
+        height: 50px;
+    }
+
+    .cart_icon img {
+        width: 40px;
+    }
+}
+
+@media screen and (min-width: 1024px) {
+    .cart_icon img {
+        width: 45px;
+    }
 }
