--- a/components/common/header/searchbar/SearchBar.module.css
+++ b/components/common/header/searchbar/SearchBar.module.css
@@ -1,22 +1,52 @@
 .searchBar_container {
     display: flex;
-    flex-basis: 40%;
-    margin-left: auto;
+    order: 3;
+    width: 100%;
+    height: 45px;
+    margin-bottom: 15px;
 }
 
 .searchBar_box {
     display: flex;
     width: 100%;
-    height: 50px;
+    padding-bottom: 5px 0;
 }
 
 .searchBar_box input {
     width: 100%;
-    padding: 10.5px 15px;
+    padding: 10px 15px;
     font-size: 16px;
-    border: 3px solid #ccc;
+    border: 2px solid #ccc;
     border-top-left-radius: 1.5rem;
     border-bottom-left-radius: 1.5rem;
     border-top-right-radius: 0;
     border-bottom-right-radius: 0;
+    -webkit-appearance: none;
+    appearance: none;
+}
+
+@media screen and (min-width: 768px) {
+    .searchBar_container {
+        flex-basis: 50%;
+        margin-left: auto;
+        order: 2;
+        margin-bottom: 0;
+    }
+
+    .searchBar_box input {
+        width: 100%;
+        font-size: 18px;
+        border: 3px solid #ccc;
+    }   
+}
+
+@media screen and (min-width: 1024px) {
+    .searchBar_container {
+        height: 50px;
+    }
+
+    .searchBar_box input {
+        padding: 0 15px;
+        line-height: 50px;
+    }
 }
