--- a/components/common/homeAllProductsGrid/HomeAllProductsGrid.module.css
+++ b/components/common/homeAllProductsGrid/HomeAllProductsGrid.module.css
@@ -1,23 +1,21 @@
 .productsGrid_container {
-    display: flex;
-    flex-wrap: wrap;
-    width: 80%;
+    display: grid;
+    grid-template-columns: 100%;
 }
 
 .productsGrid_card {
-    display: flex;
-    flex-direction: column;
-    width: 30.5%;
+    display: grid;
+    grid-template-columns: 100%;
     padding: 0.75rem;
-    margin: 25px 0 0 25px;
+    margin: 25px 10px;
     border-radius: 10px;
     background-color: #f9f9f9;
     box-shadow: 0 0 5px 0 rgb(214, 214, 214);
 }
 
 .productsGrid_item {
-    display: flex;
-    flex-direction: column;
+    /* display: flex;
+    flex-direction: column; */
     padding: 15px;
 }
 
@@ -32,4 +30,54 @@
 
 .productsGrid_card img {
     width: 100%;
+    height: 250px;
+}
+
+@media screen and (min-width: 450px) {
+    .productsGrid_card img {
+        height: 300px;
+    }    
+}
+
+@media screen and (min-width: 550px) {
+    .productsGrid_card img {
+        height: 350px;
+    }    
+}
+
+@media screen and (min-width: 650px) {
+    .productsGrid_card img {
+        height: 400px;
+    }    
+}
+
+@media screen and (min-width: 768px) {
+    .productsGrid_container {
+        grid-template-columns: 50% 50%;
+    }
+    
+    .productsGrid_card img {
+        height: 250px;
+    }
+}
+
+@media screen and (min-width: 1024px) {
+    .productsGrid_container {
+        width: 80%;
+        grid-template-columns: 50% 50%;
+    }
+
+    .productsGrid_card {
+        margin: 25px 0 0 25px;
+    }
+}
+
+@media screen and (min-width: 1280px) {
+    .productsGrid_container {
+        grid-template-columns: 33.3% 33.3% 33.3%;
+    }
+
+    .productsGrid_card {
+        margin: 25px 0 0 25px;
+    }
 }
