--- a/components/ui/logo/Logo.module.css
+++ b/components/ui/logo/Logo.module.css
@@ -1,9 +1,31 @@
 .logo_container {
-    display: flex;
+    display: inline-flex;
+    align-items: center;
+    order: 1;
+    width: 50%;
+    height: 40px;
 }
 
 .logo {
     color: #333;
-    font-size: 32px;
+    font-size: 24px;
     font-weight: 700;
+    line-height: 50px;
+}
+
+@media screen and (min-width: 768px) {
+    .logo_container {
+        width: auto;
+    }
+
+    .logo {
+        font-size: 28px;
+        padding-bottom: 8px;
+    }
+}
+
+@media screen and (min-width: 1024px) {
+    .logo {
+        font-size: 32px;
+    }
 }
